Revision history for Perl extension WWW-JSON

{{$NEXT}}
    - Added response->error 
    - Experimental ability for a response to retry itself via resp->retry(), still thinking this through so it's not in the perldoc yet
    - Create HTTP::Response objects instead of using lwp->get, ->post etc
    - Refactored how auth roles work, no more using lwp->default_header('Authorization') nonsense
    - Added a simple example using the metacpan api

0.03 2013-06-04T04:26:03Z
    - 5.08 support, since it was trivial to implement
    - Added www-json-response->handle

0.02 2013-06-02T00:51:24Z

    - First release on CPAN

0.01 2013-06-02T00:30:11Z

    - First release!
