@@ -5,13 +5,22 @@ WWW::JSON - Make working with JSON Web API's as painless as possible
 # SYNOPSIS
 
     use WWW::JSON;
-    
 
     my $wj = WWW::JSON->new(
-        base_url    => 'https://graph.facebook.com?access_token=XXXX',
+        base_url => 'http://api.metacpan.org/v0?fields=name,distribution&size=1',
+        post_body_format           => 'JSON',
+        default_response_transform => sub { shift->{hits}{hits}[0]{fields} },
     );
-    my $r = $wj->get('/me', { fields => 'email' } );
-    my $email = $r->res->{email} if ($r->success);
+
+    my $get = $wj->get(
+        '/release/_search',
+        {
+            q      => 'author:ANTIPASTA',
+            filter => 'status:latest',
+        }
+    );
+
+    warn "DISTRIBUTION: " . $get->res->{distribution} if $get->success;
 
 # DESCRIPTION
 
@@ -123,6 +132,10 @@ Basic => { username => 'antipasta', password => 'hunter2' }
 OAuth2 => Net::OAuth2::AccessToken->new( ... )
 
 New roles can be created to support different types of authentication. Documentation on this will be fleshed out at a later time.
+
+## ua\_options
+
+Options that can be passed when initializing the useragent. For example { timeout => 5 }. See LWP::UserAgent for possibilities.
 
 # METHODS
 
